@@ -543,3 +543,8 @@ com.openexchange.groupware.update.tasks.DeleteOldYahooSubscriptions
 !com.openexchange.ajax.requesthandler.converters.preview.cache.groupware.DropDataFromPreviewCacheTable
 # Executed on 2013-08-28 at 08:36:33 GMT
 !com.openexchange.ajax.requesthandler.converters.preview.cache.groupware.AddRefIdForPreviewCacheTable
+
+# v7.4.2 update tasks start here
+
+# Extends the size of the 'fname' column in the 'oxfolder_tree' table, as well as the 'name' column in the 'virtualTree' table.
+!com.openexchange.groupware.update.tasks.FolderExtendNameTask
